<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
  android:id="@+id/widget0"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/white"
  xmlns:android="http://schemas.android.com/apk/res/android"
  
>
  <Button
    android:id="@+id/trButton1"
    android:layout_width="80px"
    android:layout_height="40px"
    android:text="@string/tr_button1"
    android:layout_x="10px"
    android:layout_y="12px"
  />
  <Button
    android:id="@+id/trButton2"
    android:layout_width="80px"
    android:layout_height="40px"
    android:text="@string/tr_button2"
    android:layout_x="90px"
    android:layout_y="12px"
  />
  <Button
    android:id="@+id/trButton3"
    android:layout_width="40px"
    android:layout_height="40px"
    android:text="@string/tr_button3"
    android:textSize="20sp"
    android:layout_x="170px"
    android:layout_y="12px"
  />
  <Button
    android:id="@+id/trButton4"
    android:layout_width="40px"
    android:layout_height="40px"
    android:text="@string/tr_button4"
    android:textSize="20sp"
    android:layout_x="210px"
    android:layout_y="12px"
  />
    <Button
    android:id="@+id/trButton5"
    android:layout_width="70px"
    android:layout_height="40px"
    android:text="@string/tr_button5"
    android:layout_x="250px"
    android:layout_y="12px"
  />
  <TextView
    android:id="@+id/textView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_text1"
    android:textColor="@drawable/blue"
    android:textSize="16sp"
    android:layout_x="10px"
    android:layout_y="52px"
  />
  <com.google.android.maps.MapView 
    android:id="@+id/myMapView1" 
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent" 
    android:layout_x="0px"
    android:layout_y="82px"
    android:enabled="true" 
    android:clickable="true" 
    android:apiKey="0SYKmJXBYRPCs8u8gX7Xerqlhrv2KH-w9DByzgg"
  />
</AbsoluteLayout>