<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  <TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="新的心得:P" />
 
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/new_title" />
		
	<EditText android:id="@+id/ntitle" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="" />
		
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/new_context" />
		
	<EditText android:id="@+id/ncontent"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical"/>
		
	<Button android:id="@+id/picupload" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/new_picupload" />

	<Button android:id="@+id/new_submit" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/new_submit" />
</LinearLayout>